# fleek_buddy

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  DEMO.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/background-async/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/endpoints/: SKILL.md
Vision/: README.md  garment_descriptions.MD
Vision/pySceneDetect/: .gitignore  README.md  extract.py  gallery.py  listings.json  requirements.txt
Vision/sam3/: .gitignore  README.md  export_crops.py  garment_track.py  prompts.py  requirements.txt  run_video.py  setup_env.sh
Vision/vlm/: .env.example  .gitignore  README.md  describe_crops.py  prompts.py  requirements.txt  schema.py  setup_env.sh
alembic/: env.py
alembic/versions/: 0001_init.py
app/: db.py  main.py  models.py  schemas.py
app/routers/: items.py
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/alembic/versions/: 0001_init.py  0002_add_image_urls.py  0003_add_vision_signals.py
backend/app/: config.py  llm.py  main.py  models.py  schemas.py
backend/app/agent/: README.md  __init__.py  context.py  negotiator.py  policy.py  pricing.py  prompts.py  schemas.py
backend/app/merchant/: __init__.py  env.py  jobs.py  paths.py  pipeline.py  publish.py  schemas.py  summarize.py  vision_signals.py
backend/app/routers/: chat.py  items.py  merchant.py  negotiations.py
backend/scripts/: check_vision_signals.py
specs/: HAGGLER.md
ui/: .dockerignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ui/src/: routeTree.gen.ts  styles.css
(+35 files in other folders)
