[project]
name = "fleek-buddy-backend"
version = "0.1.0"
description = "Fleek Buddy negotiation backend: FastAPI, async SQLAlchemy and an LLM seller agent."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "litellm>=1.55",
]

[project.optional-dependencies]
dev = ["ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` in defaults is the standard FastAPI injection idiom.
ignore = ["B008"]
